# mitsuba

./: .gitignore  CMakeLists.txt
doc/: Doxyfile  compiling.tex  gendoc.py
include/mitsuba/core/: ray.h  spectrum.h
include/mitsuba/render/: bsdf.h
src/medium/: homogeneous.cpp
